added general rules page

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,17 @@
 *, *::before, *::after {
     box-sizing: border-box;
 }
+.main-header {
+    display: flex;
+    gap: 1rem;
+    align-items: center;
+}
+
+.logo-link {
+    flex-grow: ;
+    display: inline-block;
+
+}
 
 .nav-list {
     list-style: none;
@@ -8,9 +19,12 @@
     padding: 0;
 }
 
+.nav-item {
+    display: inline-block;
+    margin: 0 0.3rem;
+}
 
-ul {
-    list-style: none;
-    margin: 0;
-    padding: 0;
+.nav-item-link {
+    text-decoration: none;
+    font-weight: 700;
 }
